@@ -21,12 +21,12 @@
 .\"       EMail: cups-info@cups.org
 .\"         WWW: http://www.cups.org
 .\"
-.TH cups-lpd 8 "Common UNIX Printing System" "11 March 2006" "Easy Software Products"
+.TH cups-lpd 8 "Common UNIX Printing System" "24 April 2006" "Easy Software Products"
 .SH NAME
 cups-lpd \- receive print jobs and report printer status to lpd clients
 .SH SYNOPSIS
 .B cups-lpd
-[ -o
+[ -n ] [ -o
 .I option=value
 ]
 .SH DESCRIPTION
@@ -67,6 +67,12 @@ named \fI/etc/xinetd.d/cups\fR containing the following lines:
     }
 .fi
 .SH OPTIONS
+.TP 5
+-n
+.br
+Disables reverse address lookups; normally \fIcups-lpd\fR will
+try to discover the hostname of the client via a reverse DNS
+lookup.
 .TP 5
 -o name=value
 .br
